# rectangle

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
contrib/: hyprland.conf
rectangle/: __init__.py  backend.py  cli.py  panel.py
